[PAXWEB-154] - Allow specification of Filter behavior during RequestDispatcher processing (i.e. web.xml filter-mapping/dispatcher) Added iTest for testing